--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ color: black;
 --hue:  var(--hue-wrong);
 }
 
-.start-btn {
+.start-btn, .next-btn {
     font-size: 1.5rem;
     font-weight: bold;
     padding: 10px 20px;
